actualizacion de logo, falta corregir el footer y el contacto

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body>
 
-    
+    git status
     <header class="header">
         <nav class="nav container">
           <a href='#' class="logo">
-            <i class='bx bxl-xing logo__icon'></i>
+            <i class='bx bxs-bug logo__icon'></i>
             <span>Lynn</span>
           </a>
   
@@ -243,7 +243,7 @@
                 <div class="conteiner">
                     <div class="footer-container">      
                          <a href='#' class="logo-footer">
-                            <i class='bx bxl-xing logo__icon'></i>
+                            <i class='bx bxs-bug logo__icon'></i>
                             <span>Lynn</span>
                           </a>
                                   
@@ -259,7 +259,7 @@
                         <div class="footer-contacto">
                             <h1>Datos de Contacto</h1>
                             <h3 class="footer-text">+91 982417254</h3>
-                            <h3 class="footer-text">lynn770450@gmail.com@gmail.com</h3>
+                            <h3 class="footer-text">lynn770450@gmail.com</h3>
                             <h3 class="footer-text">Jr. Blenker S/N</h3>
                             <div class="hero__content-link">
                                 <a href="#" class="btn btn-link btn__linkedin">
